crates/rusta-edit/src/snapshots/rusta_edit__apply__tests__feedback_no_window.snap
---
source: crates/rusta-edit/src/apply.rs
expression: "report.feedback.as_deref().unwrap_or(\"<none>\")"
---
# 1 SEARCH/REPLACE block failed to match!

## SearchReplaceNoExactMatch: This SEARCH block failed to exactly match lines in snap2.rs
<<<<<<< SEARCH
qqq
rrr
=======
sss
>>>>>>> REPLACE

The SEARCH section must exactly match an existing block of lines including all white space, comments, indentation, docstrings, etc
